<resources>
    <string name="app_name">FEG</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="default_notification_channel_id">fajar_fotocopy_channel</string>

    <string-array name="pembayaran">
        <item>Cash</item>
        <item>Debit</item>
    </string-array>


    <string name="title_activity_driver_main">DriverMainActivity</string>
    <string name="title_home_driver">Home</string>
    <string name="title_riwayat_driver">Riwayat</string>
    <string name="title_profile_driver">Profile</string>
    <string name="title_activity_kasir_main">KasirMainActivity</string>
    <string name="title_home_kasir">Home</string>
    <string name="title_riwayat_kasir">Riwayat</string>
    <string name="title_profile_kasir">Profile</string>
    <string name="title_profile_keto">Profile</string>
    <string name="title_activity_keto_main">KetoMainActivity</string>
    <string name="title_home_keto">Home</string>
    <string name="title_list_transfer">List Transfer</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_gudang_main">GudangMainActivity</string>
    <string name="title_home_gudang">Home</string>
    <string name="title_kirim_gudang">Kirim</string>
    <string name="title_minta_gudang">Minta</string>
    <string name="title_profile_gudang">Profile</string>


</resources>